# syngrid

./: Cargo.toml
.github/workflows/: build.yml  deploy.yml
src/: main.rs
src/adapters/: binance.rs  mod.rs  okx.rs
src/app/: strategy.rs
src/domain/: math.rs  mod.rs  models.rs
src/utils/: mod.rs  wakelock.rs
worker/: wrangler.toml
worker/src/: index.js
